ramdisk: Update rights on the folders for sdcard1 and usbcard
Change-Id: I5b1797e9a40536a2d4f80b43db85d3a1582a929d

--- a/ramdisk/init.qcom.rc
+++ b/ramdisk/init.qcom.rc
@@ -51,9 +51,9 @@ on init
     mkdir /mnt/shell/emulated 0700 shell shell
     mkdir /storage/emulated 0555 root root
     mkdir /mnt/media_rw/sdcard1 0700 media_rw media_rw
-    mkdir /storage/sdcard1 0700 root root
-    mkdir /mnt/media_rw/usbdisk 0700 media_rw media_rw
-    mkdir /storage/usbdisk 0700 root root
+    mkdir /storage/sdcard1 0775 system system
+    mkdir /mnt/media_rw/usbdisk 0775 media_rw media_rw
+    mkdir /storage/usbdisk 0700 system system
 
     export EXTERNAL_STORAGE /storage/emulated/legacy
     export EMULATED_STORAGE_SOURCE /mnt/shell/emulated
